--- a/examples/rag/langchain_rag.ipynb
+++ b/examples/rag/langchain_rag.ipynb
@@ -5,9 +5,9 @@
    "id": "d6b9a478",
    "metadata": {},
    "source": [
-    "# LangChain RAG Example with TinyVecDB\n",
+    "# LangChain RAG Example with SimpleVecDB\n",
     "\n",
-    "This notebook demonstrates how to use TinyVecDB as a vector store with LangChain for retrieval-augmented generation (RAG)."
+    "This notebook demonstrates how to use SimpleVecDB as a vector store with LangChain for retrieval-augmented generation (RAG)."
    ]
   },
   {
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "# Install required packages (if needed)\n",
-    "# !pip install langchain langchain-core langchain-openai tinyvecdb"
+    "# !pip install langchain langchain-core langchain-openai simplevecdb"
    ]
   },
   {
@@ -32,8 +32,8 @@
     "from langchain_core.prompts import PromptTemplate\n",
     "from langchain_openai import ChatOpenAI, OpenAIEmbeddings\n",
     "from langchain_core.utils.utils import convert_to_secret_str\n",
-    "from tinyvecdb import VectorDB\n",
-    "from tinyvecdb.config import config\n",
+    "from simplevecdb import VectorDB\n",
+    "from simplevecdb.config import config\n",
     "\n",
     "# Load environment variables"
    ]
@@ -43,7 +43,7 @@
    "id": "1c85b9c6",
    "metadata": {},
    "source": [
-    "## Initialize TinyVecDB and Add Documents"
+    "## Initialize SimpleVecDB and Add Documents"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize TinyVecDB and get/create a collection\n",
+    "# Initialize SimpleVecDB and get/create a collection\n",
     "data_dir = \"./examples/rag\"\n",
     "db = VectorDB(os.path.join(data_dir, \"test.db\"))\n",
     "\n",
@@ -63,7 +63,7 @@
     "# Add sample texts to the collection\n",
     "texts = [\n",
     "    \"LangChain is awesome for building LLM applications\",\n",
-    "    \"TinyVecDB rocks as a lightweight vector store\",\n",
+    "    \"SimpleVecDB rocks as a lightweight vector store\",\n",
     "    \"RAG combines retrieval with generation for better answers\"\n",
     "]\n",
     "\n",
@@ -93,7 +93,7 @@
     "    api_key=convert_to_secret_str(\"your-embedding-api-key\")\n",
     ")\n",
     "\n",
-    "# Create LangChain vector store from TinyVecDB (specify collection name)\n",
+    "# Create LangChain vector store from SimpleVecDB (specify collection name)\n",
     "vectorstore = db.as_langchain(embeddings=embeddings, collection_name=\"langchain_demo\")\n",
     "\n",
     "# Create retriever to fetch relevant documents\n",
