--- a/examples/rag/llama_rag.ipynb
+++ b/examples/rag/llama_rag.ipynb
@@ -5,9 +5,9 @@
    "id": "3ff9c944",
    "metadata": {},
    "source": [
-    "# LlamaIndex RAG Example with TinyVecDB\n",
+    "# LlamaIndex RAG Example with SimpleVecDB\n",
     "\n",
-    "This notebook demonstrates how to use TinyVecDB as a vector store with LlamaIndex for retrieval-augmented generation (RAG)."
+    "This notebook demonstrates how to use SimpleVecDB as a vector store with LlamaIndex for retrieval-augmented generation (RAG)."
    ]
   },
   {
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "# Install required packages (if needed)\n",
-    "# !pip install llama-index llama-index-core tinyvecdb"
+    "# !pip install llama-index llama-index-core simplevecdb"
    ]
   },
   {
@@ -36,8 +36,8 @@
     ")\n",
     "from llama_index.llms.openai_like import OpenAILike\n",
     "from llama_index.embeddings.openai import OpenAIEmbedding\n",
-    "from tinyvecdb import VectorDB\n",
-    "from tinyvecdb.config import config\n",
+    "from simplevecdb import VectorDB\n",
+    "from simplevecdb.config import config\n",
     "import os"
    ]
   },
@@ -96,7 +96,7 @@
     "\n",
     "# Create sample text files\n",
     "with open(os.path.join(data_dir, \"doc1.txt\"), \"w\") as f:\n",
-    "    f.write(\"TinyVecDB is a lightweight vector database powered by sqlite-vec. It's designed to be simple and easy to use.\")\n",
+    "    f.write(\"SimpleVecDB is a lightweight vector database powered by sqlite-vec. It's designed to be simple and easy to use.\")\n",
     "\n",
     "with open(os.path.join(data_dir, \"doc2.txt\"), \"w\") as f:\n",
     "    f.write(\"Vector databases store embeddings and allow for efficient similarity search. They are essential for RAG applications.\")\n",
@@ -113,7 +113,7 @@
    "id": "daad0d1f",
    "metadata": {},
    "source": [
-    "## Initialize TinyVecDB Vector Store"
+    "## Initialize SimpleVecDB Vector Store"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize TinyVecDB\n",
+    "# Initialize SimpleVecDB\n",
     "db = VectorDB(\"./examples/rag/test.db\")\n",
     "vector_store = db.as_llama_index()\n",
     "\n",
@@ -194,7 +194,7 @@
     "query_engine = index.as_query_engine()\n",
     "\n",
     "# Query the index\n",
-    "response = query_engine.query(\"What is TinyVecDB?\")\n",
+    "response = query_engine.query(\"What is SimpleVecDB?\")\n",
     "\n",
     "print(\"Response:\")\n",
     "print(response)"
