--- a/examples/rag/ollama_rag.ipynb
+++ b/examples/rag/ollama_rag.ipynb
@@ -5,9 +5,9 @@
    "id": "b8812f1d",
    "metadata": {},
    "source": [
-    "# TinyVecDB RAG with Ollama - Multi-Collection Demo\n",
+    "# SimpleVecDB RAG with Ollama - Multi-Collection Demo\n",
     "\n",
-    "This notebook demonstrates retrieval-augmented generation (RAG) using TinyVecDB with Ollama.\n",
+    "This notebook demonstrates retrieval-augmented generation (RAG) using SimpleVecDB with Ollama.\n",
     "Learn how to use multiple collections in a single database for organizing different knowledge domains."
    ]
   },
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "import ollama\n",
-    "from tinyvecdb import VectorDB, Quantization\n",
+    "from simplevecdb import VectorDB, Quantization\n",
     "import os"
    ]
   },
@@ -59,7 +59,7 @@
    "source": [
     "## 3. Initialize Vector Database\n",
     "\n",
-    "Create a TinyVecDB instance with BIT quantization for minimal storage overhead.\n",
+    "Create a SimpleVecDB instance with BIT quantization for minimal storage overhead.\n",
     "The database supports multiple collections - each collection is a separate namespace for documents.\n",
     "Collections automatically use the embedding server running at `http://localhost:8000`."
    ]
@@ -86,7 +86,7 @@
     "# Get or create a collection for this demo\n",
     "collection = db.collection(\"ollama_demo\")\n",
     "\n",
-    "print(f\"Created TinyVecDB at {db_path}\")\n",
+    "print(f\"Created SimpleVecDB at {db_path}\")\n",
     "print(f\"Collection: {collection.name}\")\n",
     "print(f\"Quantization: {collection.quantization}\")"
    ]
@@ -114,7 +114,7 @@
     "    \"Vector databases enable semantic search by storing embeddings - numerical representations of text that capture meaning. This allows finding similar content even without exact keyword matches.\",\n",
     "    \"Ollama is a tool that allows you to run large language models locally on your own computer. It supports models like Llama 3, Mistral, and many others without requiring cloud services.\",\n",
     "    \"Retrieval-Augmented Generation (RAG) combines information retrieval with text generation. First, relevant documents are retrieved from a knowledge base, then an LLM generates answers based on that context.\",\n",
-    "    \"TinyVecDB uses sqlite-vec, a SQLite extension for vector search, enabling fast similarity searches on embedded documents stored in a single SQLite file.\",\n",
+    "    \"SimpleVecDB uses sqlite-vec, a SQLite extension for vector search, enabling fast similarity searches on embedded documents stored in a single SQLite file.\",\n",
     "    \"Quantization reduces the memory footprint of vectors by using fewer bits per dimension. BIT quantization uses only 1 bit per dimension, offering 32x compression compared to float32.\",\n",
     "    \"Local-first AI means running models and storing data entirely on your own hardware, without cloud dependencies. This ensures privacy, reduces costs, and works offline.\",\n",
     "    \"Python is a high-level programming language known for its simplicity and readability. It's widely used in data science, machine learning, and web development.\"\n",
@@ -327,7 +327,7 @@
    "outputs": [],
    "source": [
     "# Try your own question\n",
-    "my_question = \"What is TinyVecDB?\"\n",
+    "my_question = \"What is SimpleVecDB?\"\n",
     "\n",
     "print(f\"Question: {my_question}\")\n",
     "print(\"=\" * 80)\n",
@@ -342,7 +342,7 @@
    "source": [
     "## 8.5 Multi-Collection Demo\n",
     "\n",
-    "TinyVecDB supports multiple collections in a single database. This is useful for:\n",
+    "SimpleVecDB supports multiple collections in a single database. This is useful for:\n",
     "- Organizing different knowledge domains\n",
     "- Isolating experiments\n",
     "- Managing different embedding dimensions or quantization strategies"
@@ -459,7 +459,7 @@
     "\n",
     "This notebook demonstrated:\n",
     "\n",
-    "1. **Setting up TinyVecDB** with BIT quantization for minimal storage\n",
+    "1. **Setting up SimpleVecDB** with BIT quantization for minimal storage\n",
     "2. **Using collections** to organize documents in namespaces\n",
     "3. **Adding documents** to create a knowledge base\n",
     "4. **Semantic search** using vector similarity\n",
