docs: update benchmarks with real data + simplify README
- Move detailed benchmarks to docs/benchmarks.md
- README now has single key benchmark table with link to full docs
- Update notebooks: sqlite-vec → usearch references
- Update notebook cleanup to include .usearch files
- Remove sqlite-vec reference from perf_benchmark.py

--- a/examples/rag/langchain_rag.ipynb
+++ b/examples/rag/langchain_rag.ipynb
@@ -191,20 +191,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import glob\n",
+    "\n",
     "# Close the database connection\n",
     "db.close()\n",
     "\n",
     "# Cleanup: Remove the database files created during this example\n",
-    "db = os.path.join(data_dir, \"test.db\")\n",
-    "shm = os.path.join(data_dir, \"test.db-shm\")\n",
-    "wal = os.path.join(data_dir, \"test.db-wal\")\n",
+    "db_file = os.path.join(data_dir, \"test.db\")\n",
     "\n",
-    "if os.path.exists(db):\n",
-    "    os.remove(db)\n",
-    "if os.path.exists(shm):\n",
-    "    os.remove(shm)\n",
-    "if os.path.exists(wal):\n",
-    "    os.remove(wal)\n",
+    "# Remove SQLite and usearch index files\n",
+    "for f in glob.glob(f\"{db_file}*\"):\n",
+    "    os.remove(f)\n",
     "\n",
     "print(\"✓ Cleanup complete\")"
    ]
