--- a/examples/rag/ollama_rag.ipynb
+++ b/examples/rag/ollama_rag.ipynb
@@ -114,7 +114,7 @@
     "    \"Vector databases enable semantic search by storing embeddings - numerical representations of text that capture meaning. This allows finding similar content even without exact keyword matches.\",\n",
     "    \"Ollama is a tool that allows you to run large language models locally on your own computer. It supports models like Llama 3, Mistral, and many others without requiring cloud services.\",\n",
     "    \"Retrieval-Augmented Generation (RAG) combines information retrieval with text generation. First, relevant documents are retrieved from a knowledge base, then an LLM generates answers based on that context.\",\n",
-    "    \"SimpleVecDB uses sqlite-vec, a SQLite extension for vector search, enabling fast similarity searches on embedded documents stored in a single SQLite file.\",\n",
+    "    \"SimpleVecDB uses usearch HNSW indexing, enabling fast similarity searches on embedded documents stored in a single SQLite file.\",\n",
     "    \"Quantization reduces the memory footprint of vectors by using fewer bits per dimension. BIT quantization uses only 1 bit per dimension, offering 32x compression compared to float32.\",\n",
     "    \"Local-first AI means running models and storing data entirely on your own hardware, without cloud dependencies. This ensures privacy, reduces costs, and works offline.\",\n",
     "    \"Python is a high-level programming language known for its simplicity and readability. It's widely used in data science, machine learning, and web development.\"\n",
