--- a/examples/rag/llama_rag.ipynb
+++ b/examples/rag/llama_rag.ipynb
@@ -105,7 +105,7 @@
     "\n",
     "# Create sample text files\n",
     "with open(os.path.join(data_dir, \"doc1.txt\"), \"w\") as f:\n",
-    "    f.write(\"SimpleVecDB is a lightweight vector database powered by sqlite-vec. It's designed to be simple and easy to use.\")\n",
+    "    f.write(\"SimpleVecDB is a lightweight vector database powered by usearch HNSW indexing. It's designed to be simple and easy to use.\")\n",
     "\n",
     "with open(os.path.join(data_dir, \"doc2.txt\"), \"w\") as f:\n",
     "    f.write(\"Vector databases store embeddings and allow for efficient similarity search. They are essential for RAG applications.\")\n",
@@ -239,6 +239,7 @@
    "outputs": [],
    "source": [
     "import shutil\n",
+    "import glob\n",
     "\n",
     "# Close the database connection\n",
     "db.close()\n",
@@ -247,16 +248,10 @@
     "if os.path.exists(data_dir):\n",
     "    shutil.rmtree(data_dir)\n",
     "\n",
-    "db = os.path.join(data_dir, \"test.db\")\n",
-    "shm = os.path.join(data_dir, \"test.db-shm\")\n",
-    "wal = os.path.join(data_dir, \"test.db-wal\")\n",
-    "\n",
-    "if os.path.exists(db):\n",
-    "    os.remove(db)\n",
-    "if os.path.exists(shm):\n",
-    "    os.remove(shm)\n",
-    "if os.path.exists(wal):\n",
-    "    os.remove(wal)\n",
+    "# Remove SQLite and usearch index files\n",
+    "db_file = \"./examples/rag/test.db\"\n",
+    "for f in glob.glob(f\"{db_file}*\"):\n",
+    "    os.remove(f)\n",
     "\n",
     "print(\"✓ Cleanup complete\")"
    ]
